add some more logic to bookItems (to fetch and count (available) books by their id).